@@ -3,6 +3,7 @@ LIBS := selenium_remote
 
 %: 
 	@for dir in $(LIBS); do \
-	    (cd $$dir; $(MAKE) $@) \
-	done
-
+	 if ! test  -f $$dir/SKIP ; then \
+	    $(MAKE) -C $$dir $@ || exit 1; \
+	 fi \
+	done;
