@@ -3,5 +3,5 @@ include ../../../include.mk
 
 all: selenium_api.html 
 
-selenium_api.html: ../priv/iedoc.xml
+selenium_api.html: ../priv/iedoc.xml ../priv/make_api.esh
 	$(ERLDIR)/bin/escript ../priv/make_api.esh doc . ../priv/iedoc.xml
