@@ -29,17 +29,17 @@ default_server_test () ->
     Start_url = "/selenium-server/tests/html/test_click_page1.html",
     selenium_api:open(Session, Start_url),
 
-    {ok, "Click here for next page" ++ _Rest} = selenium_api:getText (Session,"link"),
+    {ok, "Click here for next page" ++ _Rest} = selenium_api:get_text (Session,"link"),
     
-    {ok, StringLinks} = selenium_api: getAllLinks (Session),
+    {ok, StringLinks} = selenium_api: get_all_links (Session),
     true = length (StringLinks) > 3,
     "linkToAnchorOnThisPage" = lists: nth (4, StringLinks),
     
     selenium_api: click (Session, "link"),
-    selenium_api: waitForPageToLoad (Session, "5000"),
+    selenium_api: wait_for_page_to_load (Session, "5000"),
     %%    Head ++ "/selenium-server/tests/html/test_click_page2.html" = selenium:cmd(get_location,Session),
     selenium_api: click (Session, "previousPage"),
-    selenium_api: waitForPageToLoad (Session, "5000"),
+    selenium_api: wait_for_page_to_load (Session, "5000"),
     %%    Head ++ "/selenium-server/tests/html/test_click_page1.html" = selenium:cmd(get_location,Session),
     selenium: stop (Session),
     ok.
@@ -53,8 +53,8 @@ google_test () ->
     selenium_api: open (Session, "http://www.google.com/webhp"),
     selenium_api: type (Session, "q", "hello world"),
     selenium_api: click (Session, "btnG"),
-    selenium_api: waitForPageToLoad (Session, "5000"),
-    {ok,"hello world - Google Search"} = selenium_api: getTitle (Session),
+    selenium_api: wait_for_page_to_load (Session, "5000"),
+    {ok,"hello world - Google Search"} = selenium_api: get_title (Session),
     selenium: stop (Session),
     ok.
 
@@ -68,15 +68,15 @@ keypress_test () ->
 			       URL),
     Ajax_url = "http://www.irian.at/selenium-server/tests/html/ajax/ajax_autocompleter2_test.html",
     selenium_api: open (Session, Ajax_url),
-    selenium_api: keyPress (Session, InputId, "74"),
+    selenium_api: key_press (Session, InputId, "74"),
     receive after 500 -> ok end,
-    selenium_api: keyPress (Session, InputId, "97"),
-    selenium_api: keyPress (Session, InputId, "110"),
+    selenium_api: key_press (Session, InputId, "97"),
+    selenium_api: key_press (Session, InputId, "110"),
     receive after 500 -> ok end,
-    {ok, "Jane Agnews"} = selenium_api: getText (Session, UpdateId),
-    selenium_api: keyPress(Session, InputId, "13"),
+    {ok, "Jane Agnews"} = selenium_api: get_text (Session, UpdateId),
+    selenium_api: key_press(Session, InputId, "13"),
     receive after 500 -> ok end,
-    {ok, "Jane Agnews"} = selenium_api: getValue (Session, InputId),
+    {ok, "Jane Agnews"} = selenium_api: get_value (Session, InputId),
     selenium: stop (Session).
 
 type_very_long_text_test () ->
@@ -86,10 +86,10 @@ type_very_long_text_test () ->
 			       ?COMMAND,
 			       URL),
     Start_url = "/selenium-server/tests/html/test_rich_text.html",
-    LongText = lists:duplicate (50000, $z), 
+    LongText = lists: duplicate (50000, $z), 
     selenium_api: open (Session, Start_url),
     selenium_api: type (Session, "richtext", LongText),
-    {ok, LongText} = selenium_api: getValue (Session, "richtext"),
+    {ok, LongText} = selenium_api: get_value (Session, "richtext"),
     selenium: stop (Session).
 
 utf8_test () ->    
@@ -100,12 +100,12 @@ utf8_test () ->
 			       URL),
     Start_url = "/selenium-server/tests/html/test_editable.html",
     selenium_api: open (Session, Start_url),
-    selenium_api: waitForPageToLoad(Session, "5000"),
+    selenium_api: wait_for_page_to_load(Session, "5000"),
     Object = "normal_text",
     String = [85,110,105,99,111,100,101,32479,19968,30721],
     Test = fun(Text) ->
 		   selenium_api: type (Session, Object, Text),
-		   {ok, Text} = selenium_api: getValue (Session,Object)
+		   {ok, Text} = selenium_api: get_value (Session,Object)
 	   end,
     Inputs = ["foo", xmerl_ucs: to_utf8 (String)],
     lists: foreach (Test, Inputs),
@@ -129,9 +129,9 @@ i18n_test () ->
     
     Test = fun({Id,Data}) ->
 		   UTF8 = xmerl_ucs:to_utf8(Data),
-		   Result = selenium_api: isTextPresent (Session, UTF8),
+		   Result = selenium_api: is_text_present (Session, UTF8),
 		   {ok, "true"} = Result,
-		   {ok, UTF8} = selenium_api: getText (Session, Id)
+		   {ok, UTF8} = selenium_api: get_text (Session, Id)
 	   end,
     lists:foreach(Test, Datas),
     selenium: stop (Session).
@@ -146,7 +146,7 @@ i18n_test () ->
 %%      {{getText, ["link"], _}, {ok, "OK"}},
 %%      {{{array, getAllLinks}, [], _}, {ok, "OK"}},
 %%      {{click, ["link"]}, {not_tested, {ok, none}}},
-%%      {{waitForPageToLoad, ["5000"]}, {not_tested, {ok, none}}}] = Results.
+%%      {{wait_for_page_to_load, ["5000"]}, {not_tested, {ok, none}}}] = Results.
 
 
 %% commands () ->
@@ -170,7 +170,7 @@ i18n_test () ->
 %%     {click, ["link"]}.
 
 %% wait_for_page_to_load () ->
-%%     {waitForPageToLoad, ["5000"]}.
+%%     {wait_for_page_to_load, ["5000"]}.
 
 %% selenium_config () ->
 %%     URL = "http://localhost:4444",
